Huge revamp of website

--- a/de/index.html
+++ b/de/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="de">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hogar</title>
+        <title>Hause</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/navbar.css">
@@ -18,30 +18,30 @@
             <span class="logo">Strider Studios</span>
             <nav>
                 <ul class="nav__links">
-                    <li><a href="">Hogar</a></li>
-                    <li><a href="projects.html">Proyectos</a></li>
+                    <li><a href="">Hause</a></li>
+                    <li><a href="projects.html">Projekte</a></li>
                 </ul>
             </nav>
             
-            <p class="menu cta">Menú</p>
+            <p class="menu cta">Speisekarte</p>
             <div class="overlay">
                 <a class="close">&times;</a>
                 <div class="overlay__content">
-                    <a href="">Hogar</a>
-                    <a href="projects.html">Proyectos</a>
+                    <a href="">Hause</a>
+                    <a href="projects.html">Projekte</a>
                     <br>
                     <br>
-                    <span>Socials</span>
+                    <span>Soziales</span>
                     <ul>
                         <li><a href="https://twitter.com/The_RealStrider" target="_blank">Twitter</a></li>
                         <li><a href="https://www.youtube.com/c/TheRealStrider" target="_blank">YouTube</a></li>
                         <li><a href="https://discord.gg/NNYh4gR6hv" target="_blank">Discord</a></li>
                     </ul>
-                    <span>Tranducir</span>
+                    <span>Seite übersetzen</span>
                     <ul>
-                        <li><a href="../index.html">Inglés</a></li>
-                        <li><a href="">Español</a></li>
-                        <li><a href="../de/index.html">Alemán</a></li>
+                        <li><a href="../index.html">Englisch</a></li>
+                        <li><a href="../es/index.html">Spanisch</a></li>
+                        <li><a href="">Deutsch</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,16 +50,17 @@
             <!--First element-->
             <div class="wrapper">
                 <h1>Strider Studios</h1>
-                <p>Bienvenido a Strider Studios, hogar de las creaciones realizadas por TheRealStrider. <br>
-                    ¿Por qué no mirar a tu alrededor y ver lo que tengo reservado para ti?</p>
+                <p>Willkommen zu Strider Studios, heimat der Kreationen aus TheRealStrider. <br>
+                    Warum schaust du dich nicht um und siehst, was ich für dich auf Lager habe?</p>
             </div>
             <!--Second element-->
             <div class="wrapper2">
-                    <h3>¡Bienvenido a Strider Studios!</h3>
-                <p>¡Hola viajero! Bienvenido a un sitio web que muestra todas las cosas que he hecho a lo largo de los años. Mi meta es
-                divertirse creando cosas que otros pueden disfrutar. Esto puede ser tan simple como un mod para Minecraft a un juego que
-                usted puede jugar. Este sitio web por sí solo es un proyecto para mí y una manera de mostrar lo que he hecho para que
-                otros vean. ¡No puedo esperar a que vea los proyectos, Adelante y compruébelos!</p>
+                    <h3>Willkommen zu Strider Studios!</h3>
+                <p>Hallo Reisender! Willkommen auf einer Website, die all die Dinge zeigt, die ich im Laufe der Jahre gemacht habe. Mein
+                Ziel ist es, Spaß daran zu haben, Dinge zu erschaffen, an denen andere Freude haben. Dies kann so einfach sein wie ein
+                Mod für Minecraft zu einem Spiel, das Sie spielen können. Diese Website allein ist ein Projekt für mich und eine
+                Möglichkeit, anderen zu zeigen, was ich getan habe. Ich kann es kaum erwarten, dass Sie die Projekte sehen, gehen Sie
+                voran und sehen Sie sie sich an!</p>
                 <img src="pictures/logo.png" alt="Logo">
             </div>
         </div>
@@ -67,7 +68,7 @@
             <span class="logo">Strider Studios</span>
             <nav>
                 <ul class="socials">
-                    <li class="FLhead">Socials</li>
+                    <li class="FLhead">Soziales</li>
                     <li><a href="https://twitter.com/The_RealStrider" target="_blank">Twitter</a></li>
                     <li><a href="https://www.youtube.com/c/TheRealStrider" target="_blank">YouTube</a></li>
                     <li><a href="https://discord.gg/NNYh4gR6hv" target="_blank">Discord</a></li>
@@ -75,10 +76,10 @@
             </nav>
             <nav>
                 <ul class="translate">
-                    <li class="FLhead">Traducir Página</li>
-                    <li><a href="../index.html">Inglés</a></li>
-                    <li><a href="">Español</a></li>
-                    <li><a href="../de/index.html">Alemán</a></li>
+                    <li class="FLhead">Seite übersetzen</li>
+                    <li><a href="../index.html">Englisch</a></li>
+                    <li><a href="../es/index.html">Spanisch</a></li>
+                    <li><a href="">Deutsch</a></li>
                 </ul>
             </nav>
         </footer>
