--- a/de/projects.html
+++ b/de/projects.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Projekte</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/project.css">
     <!--Fonts-->
@@ -18,39 +18,39 @@
         <span class="logo">Strider Studios</span>
         <nav>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Projects</a></li>
+                <li><a href="index.html">Hause</a></li>
+                <li><a href="">Projekte</a></li>
             </ul>
         </nav>
     
-        <p class="menu cta">Menu</p>
+        <p class="menu cta">Speisekarte</p>
         <div class="overlay">
             <a class="close">&times;</a>
             <div class="overlay__content">
-                <a href="index.html">Home</a>
-                <a href="">Projects</a>
+                <a href="index.html">Hause</a>
+                <a href="">Projekte</a>
                 <br>
                 <br>
-                <span>Socials</span>
+                <span>Soziales</span>
                 <ul>
                     <li><a href="https://twitter.com/The_RealStrider" target="_blank">Twitter</a></li>
                     <li><a href="https://www.youtube.com/c/TheRealStrider" target="_blank">YouTube</a></li>
                     <li><a href="https://discord.gg/NNYh4gR6hv" target="_blank">Discord</a></li>
                 </ul>
-                <span>Translate</span>
+                <span>Seite übersetzen</span>
                 <ul>
-                    <li><a href="">English</a></li>
-                    <li><a href="es/projects.html">Spanish</a></li>
-                    <li><a href="de/projects.html">German</a></li>
+                    <li><a href="../projects.html">Englisch</a></li>
+                    <li><a href="../es/projects.html">Spanisch</a></li>
+                    <li><a href="">Deutsch</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <div class="flexbox">
         <div class="wrapper">
-            <h1>Projects</h1>
-            <p>Sorry but there are no projects as of right now.<br> Instead, have a look at the previous style of this <a id="lol" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" onclick="myFunction()">page</a>!</p>
-            <p id="imagine">I seriously cannot believe you fell for that...</p>
+            <h1>Projekte</h1>
+            <p>Im Moment gibt es leider keine Projekte.<br> Schauen Sie sich stattdessen den vorherigen Stil dieser <a id="lol" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" onclick="myFunction()">Seite an</a>!</p>
+            <p id="imagine">Ich kann wirklich nicht glauben, dass du darauf hereingefallen bist...</p>
         </div>
     </div>
     <!--NavBar-->
@@ -58,7 +58,7 @@
         <span class="logo">Strider Studios</span>
         <nav>
             <ul class="socials">
-                <li class="FLhead">Socials</li>
+                <li class="FLhead">Soziales</li>
                 <li><a href="https://twitter.com/The_RealStrider" target="_blank">Twitter</a></li>
                 <li><a href="https://www.youtube.com/c/TheRealStrider" target="_blank">YouTube</a></li>
                 <li><a href="https://discord.gg/NNYh4gR6hv" target="_blank">Discord</a></li>
@@ -66,10 +66,10 @@
         </nav>
         <nav>
             <ul class="translate">
-                <li class="FLhead">Translate Page</li>
-                <li><a href="">English</a></li>
-                <li><a href="es/projects.html">Spanish</a></li>
-                <li><a href="de/projects.html">German</a></li>
+                <li class="FLhead">Seite übersetzen</li>
+                <li><a href="../projects.html">Englisch</a></li>
+                <li><a href="../es/projects.html">Spanisch</a></li>
+                <li><a href="">Deutsch</a></li>
             </ul>
         </nav>
     </footer>
