--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul class="nav__links">
                     <li><a href="">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="projects">Projects</a></li>
                 </ul>
             </nav>
             
@@ -29,7 +29,7 @@
                 <a class="close">&times;</a>
                 <div class="overlay__content">
                     <a href="">Home</a>
-                    <a href="projects.html">Projects</a>
+                    <a href="projects">Projects</a>
                     <br>
                     <br>
                     <span>Socials</span>
