--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <span class="logo">Strider Studios</span>
         <nav>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index">Home</a></li>
                 <li><a href="">Projects</a></li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
         <div class="overlay">
             <a class="close">&times;</a>
             <div class="overlay__content">
-                <a href="index.html">Home</a>
+                <a href="index">Home</a>
                 <a href="">Projects</a>
                 <br>
                 <br>
