Cleaned up CSS files.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="css/styles.css">
-        <!--Fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--NavBar-->
@@ -20,7 +16,7 @@
             <nav>
                 <ul class="nav__links">
                     <li><a href="">Home</a></li>
-                    <li><a href="projects">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
             
@@ -29,7 +25,7 @@
                 <a class="close">&times;</a>
                 <div class="overlay__content">
                     <a href="">Home</a>
-                    <a href="projects">Projects</a>
+                    <a href="projects.html">Projects</a>
                     <br>
                     <br>
                     <span>Socials</span>
@@ -52,7 +48,7 @@
             <!--Second element-->
             <div class="wrapper2">
                     <h3>Welcome to Strider Studios!</h3>
-                <p>Hello there traveller! Welcome to a website showcasing all of the things I have made throughout the years. My goal is to have fun creating things others can enjoy. This can be as simple as a mod for Minecraft to a game that you can play. This website alone is a project for me and a way to show what I have done for others to see. Can't wait for you to see the projects, go ahead and check them out!</p>
+                <p>Hello there traveller! Welcome to a website showcasing all the things I have made throughout the years. My goal is to have fun creating things others can enjoy. This can be as simple as a mod for Minecraft to a game that you can play. This website alone is a project for me and a way to show what I have done for others to see. Can't wait for you to see the projects, go ahead and check them out!</p>
                 <img src="pictures/logo.png" alt="Logo">
             </div>
         </div>
