--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,6 @@
     <title>Projects</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/project.css">
-    <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--NavBar-->
@@ -18,7 +14,7 @@
         <span class="logo">Strider Studios</span>
         <nav>
             <ul class="nav__links">
-                <li><a href="index">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="">Projects</a></li>
             </ul>
         </nav>
@@ -27,7 +23,7 @@
         <div class="overlay">
             <a class="close">&times;</a>
             <div class="overlay__content">
-                <a href="index">Home</a>
+                <a href="index.html">Home</a>
                 <a href="">Projects</a>
                 <br>
                 <br>
