Added much needed meta tags and fixed Project page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home</title>
-        <meta name="description" content="">
+        <meta name="description" content="Content for Strider Studios">
+        <meta name="keywords" content="Strider Studios, StriderStudios, Strider, HTML, CSS, JavaScript, Minecraft, Programming, Coding, GitHub, Discord">
+        <meta name="author" content="TRStrider">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="css/styles.css">
@@ -65,6 +67,6 @@
             </nav>
         </footer>
         <!--Mobile-->
-        <script type="text/javascript" src="mobile.js"></script>
+        <script type="text/javascript" src="JS/mobile.js"></script>
     </body>
 </html>
