--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta namn="keywords" content="Projects, Minecraft">
+    <meta name="author" content="TRStrider">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/navbar.css">
@@ -56,17 +58,8 @@
         </nav>
     </footer>
     <!--Mobile-->
-    <script type="text/javascript" src="mobile.js"></script>
+    <script type="text/javascript" src="JS/mobile.js"></script>
     <!--Lol-->
-    <script>
-        function closeTroll() {
-                document.getElementById("imagine").style.opacity = "0";
-            }
-
-        function myFunction() {
-            document.getElementById('imagine').style.opacity = "100";
-            window.setTimeout(closeTroll, 10000);
-        }
-    </script>
+    <script src="JS/project.js" defer></script>
 </body>
 </html>
