--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!--FONTS-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     </head>
     <body>
         <!--NavBar-->
@@ -22,7 +22,7 @@
             <span class="logo">Strider Studios</span>
             <nav>
                 <ul class="nav__links">
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
             <div class="overlay">
                 <a class="close">&times;</a>
                 <div class="overlay__content">
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
                     <br>
                     <br>
@@ -54,9 +54,9 @@
             </div>
             <!--Second element-->
             <div class="wrapper2">
-                    <h3>Welcome to Strider Studios!</h3>
+                    <h2>Welcome to Strider Studios!</h2>
                 <p>Hello there traveller! Welcome to a website showcasing all the things I have made throughout the years. My goal is to have fun creating things others can enjoy. This can be as simple as a mod for Minecraft to a game that you can play. This website alone is a project for me and a way to show what I have done for others to see. Can't wait for you to see the projects, go ahead and check them out!</p>
-                <img src="pictures/logo.png" alt="Logo">
+                <img src="pictures/logo.webp" width="800" alt="Logo">
             </div>
         </div>
         <!--NavBar-->
