--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Projects, Minecraft">
     <meta name="author" content="TRStrider">
+    <meta name="description" content="Projects for Strider Studios">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/navbar.css">
@@ -23,7 +24,7 @@
         <nav>
             <ul class="nav__links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
     
@@ -32,7 +33,7 @@
             <a class="close">&times;</a>
             <div class="overlay__content">
                 <a href="index.html">Home</a>
-                <a href="">Projects</a>
+                <a href="projects.html">Projects</a>
                 <br>
                 <br>
                 <span>Socials</span>
@@ -67,9 +68,9 @@
     <script type="text/javascript" src="JS/mobile.js"></script>
 
     <!-- Load React. -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin defer></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin defer></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js" defer></script>
     <script type="text/javascript" src="JS/functions.js"></script>
     <script type="text/babel" src="JS/project.js"></script>
 
