Fixing performance again

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <p class="menu cta">Menu</p>
             <div class="overlay">
-                <a class="close">&times;</a>
+                <span class="close">&times;</span>
                 <div class="overlay__content">
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
@@ -56,7 +56,7 @@
             <div class="wrapper2">
                     <h2>Welcome to Strider Studios!</h2>
                 <p>Hello there traveller! Welcome to a website showcasing all the things I have made throughout the years. My goal is to have fun creating things others can enjoy. This can be as simple as a mod for Minecraft to a game that you can play. This website alone is a project for me and a way to show what I have done for others to see. Can't wait for you to see the projects, go ahead and check them out!</p>
-                <img src="pictures/logo.webp" width="800" alt="Logo">
+                <img src="pictures/logo.webp" width="800" height="800" alt="Logo">
             </div>
         </div>
         <!--NavBar-->
