--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
     
         <p class="menu cta">Menu</p>
         <div class="overlay">
-            <a class="close">&times;</a>
+            <span class="close">&times;</span>
             <div class="overlay__content">
                 <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
