Removed React and fixed support for 1440p screens

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </header>
+        <!--END OF NAVBAR-->
         <!--Webpage-->
         <div class="flexbox">
             <!--First element-->
