--- a/projects.html
+++ b/projects.html
@@ -45,10 +45,20 @@
             </div>
         </div>
     </header>
+    <!--END OF NAVBAR-->
+
     <div class="flexbox">
         <div class="wrapper">
             <h1>Projects</h1>
-            <div id="project"></div>
+            <div class="works">
+                <div id="project">
+                    <div id="cwm" onclick="location.href='projects/coloredwoodmod.html';">
+                        <h2>Colored Wood Mod</h2>
+                        <img src="../pictures/mymod.webp" alt="Example of the mod" width=200 height=200>
+                        <p>This Minecraft mod adds in colored wood so you can have more colors to your houses.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -67,12 +77,6 @@
     <!--Mobile-->
     <script type="text/javascript" src="JS/mobile.js"></script>
 
-    <!-- Load React. -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin defer></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin defer></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js" defer></script>
-    <script type="text/javascript" src="JS/functions.js"></script>
-    <script type="text/babel" src="JS/project.js"></script>
 
 </body>
 </html>
